# robot_top_level

./: README.md  cobo_arm_control_improvements.md
api_interface/: CMakeLists.txt  package.xml
api_interface/action/: Navigate.action
api_interface/srv/: MyService.srv
arm_pose_joy/: CMakeLists.txt  package.xml
arm_pose_joy/launch/: teleop-launch.py
arm_pose_joy/src/: arm_node.cpp  arm_twist_joy.cpp  arm_twist_joy2.cpp
cobo_arm_control/: CMakeLists.txt  README.md  REFACTORING_SUMMARY.md  cobo_arm_control.xml  package.xml  view_robot.rviz
cobo_arm_control/bringup/config/: cobo_controller.yaml
cobo_arm_control/bringup/launch/: cobo_controller.launch.py  send_trajectory.launch.py
cobo_arm_control/controller/: cobo_controller.cpp  cobo_controller.cpp.old  cobo_controller.cpp.org  ik_solver.cpp  test_ik_solver.cpp
cobo_arm_control/controller/include/cobo_arm_control/: cobo_controller.hpp  ik_solver.hpp
cobo_arm_control/description/launch/: view_cobo.launch.py
cobo_arm_control/description/ros2_control/: cobo.ros2_control_macro.xacro
cobo_arm_control/description/srdf/: r6bot.srdf
cobo_arm_control/description/urdf/: bob4.macro.xacro  bob4.urdf.xacro
cobo_arm_control/description/urdf/old/: bob3.macro.xacro  bob3.urdf  bob3.urdf.xacro  bob3.urdf.xacro1  bob3.urdf.xacro_org  bob3.xacro  r6bot.urdf.xacro
cobo_arm_control/doc/: userdoc.rst
cobo_arm_control/hardware/: arduino_comms.cpp  cobo_hardware.cpp
cobo_arm_control/hardware/include/cobo_arm_control/: arduino_comms.hpp  cobo_hardware.hpp
cobo_arm_control/msg/: cobocombinedmsg.msg
cobo_arm_control/reference_generator/: send_trajectory.cpp  send_trajectory_org.cpp
cobonetix_interfaces/: CMakeLists.txt  package.xml
data/: order_001.csv  order_002.csv  order_003.csv  orders.csv  trajectories.csv
nn/: CHANGES_2LINK.md  NUMPY_VERSION.md  README.md  README_IK.md  README_NO_TENSORBOARD.md  SUMMARY.md  create_hdf5_dataset.py  create_hdf5_dataset_single_camera.py  ik.py  interactive_ik_demo.py  inverse_kinematics_network.py  robot_control_network.py  robot_control_network_single_camera.py  test_inverse_kinematics.py  train_inverse_kinematics.py  train_inverse_kinematics_no_tensorboard.py  train_robot_network.py  train_robot_network_no_tensorboard.py  train_robot_network_single_camera.py
picking_system/: arm_init_calibrate.py  package.xml  setup.cfg  setup.py
picking_system/source/: pick_item.py  (+8 more)
services/: action_server.py  cmd_kb.py  cmd_test.py  gpio_service_client.py  gpio_service_server.py  gpio_status_client.py  gpio_status_server.py  joint_csv_player.py  joint_input.py  joint_replay.py  joint_service_client.py  joint_service_server.py  pose_input.py  pose_service_client.py  pose_service_server.py  td.h5  td1.h5  test_cobo_controller_launch.py  test_urdf_xacro.py  test_view_robot_launch.py  topic_merger.py  training_data.h5  trajectory1.csv  trajectory_service_client.py  trajectory_service_server.py
user_data/: all_orders.csv  order1.csv
(+33 files in other folders)
